# roocodez

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
src/roocodez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/roocodez/tools/: access_mcp_resource.py  apply_diff.py  ask_followup_question.py  attempt_completion.py  execute_command.py  fetch_instructions.py  insert_content.py  list_code_definition_names.py  list_files.py  new_task.py  read_file.py  search_and_replace.py  search_files.py  switch_mode.py  update_todo_list.py  use_mcp.py  write_to_file.py
